AM_CPPFLAGS=-I$(top_srcdir) -I$(top_builddir)
noinst_PROGRAMS = genisslib
genisslib_SOURCES = scanner.cc clex.cc action.cc bitfield.cc cli.cc comment.cc conststr.cc isa.cc main.cc operation.cc product.cc referencecounting.cc sourcecode.cc strtools.cc variable.cc generator.cc riscgenerator.cc ciscgenerator.cc subdecoder.cc specialization.cc errtools.cc 
genisslib_CPPFLAGS = -DGENISSLIB_VERSION=\"3.0.2\"
noinst_HEADERS= action.hh cli.hh errtools.hh isa.hh riscgenerator.hh specialization.hh variable.hh bitfield.hh comment.hh fwd.hh main.hh product.hh scanner.hh clex.hh strtools.hh vect.hh ciscgenerator.hh conststr.hh generator.hh operation.hh referencecounting.hh sourcecode.hh subdecoder.hh 
